--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.aid.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:name="com.example.aid.ui.info.infoFragment"
+        android:label="@string/title_info"
+        tools:layout="@layout/fragment_info" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
