--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimary1">#efaa52</color>
+    <color name="colorPrimaryDark1">#efaa52</color>
+    <color name="colorAccent1">#D81B60</color>
+    <color name="color1">#FFFFFF</color>
+    <color name="color2">#666666</color>
+    <color name="color3">#D0D0D0</color>
+
+    <color name="color11">#59B29C</color>
+
+    <color name="color12">#7AD6BF</color>
+    <color name="color13">#9BECD9</color>
+
+    <color name="color14">#D7D1D3</color>
+    <color name="color15">#F4E161</color>
+
+    <color name="color16">#F9974E</color>
+    <color name="colorPrimary">#efaa52</color>
     <color name="colorGray">#BABABA</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorTheme">#efaa52</color>
     <color name="colorThemeLight">#EFBF81</color>
     <color name="colorBlack">#000000</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryDark">#efaa52</color>
+    <color name="colorPrimary2">#ffffff</color>
 </resources>
