--- a/app/src/main/res/layout/activity_name_edit.xml
+++ b/app/src/main/res/layout/activity_name_edit.xml
@@ -39,7 +39,7 @@
         android:selectAllOnFocus="true"
         android:textColor="@color/colorBlack"
         android:textSize="25sp"
-        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTint="@color/colorPrimary2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
         android:paddingStart="10dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorPrimary2"
         android:text="是否对他人显示"
         android:textSize="23sp"/>
 </LinearLayout>
