--- a/app/src/main/res/layout/content_photo.xml
+++ b/app/src/main/res/layout/content_photo.xml
@@ -19,24 +19,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="0dp"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorPrimary2"
             android:orientation="horizontal"
             android:layout_marginTop="80dp">
 
             <TextView
                 android:id="@+id/info_photo"
                 android:layout_width="0dp"
-                android:layout_weight="8"
-                android:layout_height="wrap_content"
+                android:layout_height="63dp"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="20dp"
+                android:layout_weight="8"
+                android:clickable="true"
+                android:focusable="true"
                 android:paddingTop="20dp"
                 android:paddingBottom="20dp"
-                android:layout_gravity="center_vertical"
                 android:text="@string/info_photo"
                 android:textColor="@android:color/black"
-                android:textSize="25sp"
-                android:clickable="true"
-                android:focusable="true"/>
+                android:textSize="25sp" />
             <ImageView
                 android:id="@+id/info_showphoto"
                 android:layout_width="90dp"
@@ -69,7 +69,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorPrimary2"
             android:orientation="horizontal"
             android:layout_marginTop="20dp">
 
@@ -121,7 +121,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorPrimary2"
             android:orientation="horizontal"
             android:layout_marginTop="20dp">
 
@@ -155,7 +155,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorPrimary2"
             android:orientation="horizontal"
             android:layout_marginTop="20dp">
 
@@ -206,7 +206,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorPrimary2"
             android:orientation="horizontal"
             android:layout_marginTop="20dp">
 
