--- a/app/src/main/res/drawable/btn_data.xml
+++ b/app/src/main/res/drawable/btn_data.xml
@@ -8,7 +8,7 @@
 </item>
     <item android:state_pressed="false">
         <shape>
-            <solid android:color="@color/colorPrimaryDark"/>
+            <solid android:color="@color/colorTheme"/>
             <gradient android:gradientRadius="5dp"/>
         </shape>
     </item>
