--- a/app/src/main/res/layout/activity_sex_edit.xml
+++ b/app/src/main/res/layout/activity_sex_edit.xml
@@ -31,7 +31,7 @@
             android:paddingStart="10dp"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:background="@color/colorPrimary2"
+            android:background="@color/colorPrimary"
             android:text="女"
             android:textSize="23sp"/>
         <Switch
@@ -42,7 +42,7 @@
             android:paddingStart="10dp"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:background="@color/colorPrimary2"
+            android:background="@color/colorPrimary"
             android:text="是否对他人显示"
             android:textSize="23sp"/>
     </LinearLayout>
