--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -8,8 +8,8 @@
 
     <Button
         android:id="@+id/forum_others_bt"
-        android:layout_width="149dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="#EFAA52"
         android:text="其他"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -18,8 +18,8 @@
 
     <Button
         android:id="@+id/forum_people_bt"
-        android:layout_width="149dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="#EFAA52"
         android:text="人员"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -28,15 +28,14 @@
 
     <Button
         android:id="@+id/forum_medicine_bt"
-        android:layout_width="149dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="#EFAA52"
         android:text="药物"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toStartOf="@+id/forum_others_bt"
         app:layout_constraintStart_toEndOf="@+id/forum_people_bt"
         app:layout_constraintTop_toTopOf="parent" />
-
     <ListView
         android:id="@+id/forum_lv"
         android:layout_width="405dp"
