--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -16,7 +16,7 @@
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
-           android:background="@color/colorPrimaryDark1"
+           android:background="@color/colorTheme"
            android:gravity="center">
 
            <Button
@@ -72,7 +72,7 @@
                 android:layout_height="20dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
-                android:background="@color/colorPrimaryDark1"
+                android:background="@color/colorTheme"
                 android:textAlignment="center"
                 >
             </Spinner>
@@ -83,7 +83,7 @@
                 android:layout_marginLeft="75dp"
                 android:layout_marginTop="4dp"
                 android:layout_toRightOf="@+id/spinner"
-                android:background="@color/colorPrimaryDark1"
+                android:background="@color/colorTheme"
                 android:drawableRight="@drawable/paixu"
                 android:text="排序" />
         </RelativeLayout>
