--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary1">#efaa52</color>
-    <color name="colorPrimaryDark1">#efaa52</color>
+
     <color name="colorAccent1">#D81B60</color>
     <color name="color1">#FFFFFF</color>
     <color name="color2">#666666</color>
@@ -16,12 +15,12 @@
     <color name="color15">#F4E161</color>
 
     <color name="color16">#F9974E</color>
-    <color name="colorPrimary">#efaa52</color>
+
     <color name="colorGray">#BABABA</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorTheme">#efaa52</color>
     <color name="colorThemeLight">#EFBF81</color>
     <color name="colorBlack">#000000</color>
     <color name="colorPrimaryDark">#efaa52</color>
-    <color name="colorPrimary2">#ffffff</color>
+    <color name="colorPrimary">#ffffff</color>
 </resources>
