--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -6,42 +6,49 @@
     android:layout_height="match_parent"
     tools:context=".ui.dashboard.DashboardFragment">
 
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#EFAA52"
+        android:gravity="center"
+        android:id="@+id/resources_list1">
     <Button
         android:id="@+id/task_list"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/task_tab"
         android:background="#EFAA52"
+        android:textSize="20sp"
+        android:textColor="#ffffff"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <Button
         android:id="@+id/resources_list"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/resources_tab"
         android:background="#EFAA52"
+        android:textSize="20sp"
+        android:textColor="#ffffff"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintStart_toStartOf="@id/task_list"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <Button
         android:id="@+id/new_task_resources"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
         android:text="@string/new_button_tab"
         android:background="#EFAA52"
+        android:textSize="20sp"
+        android:textColor="#ffffff"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintStart_toStartOf="@id/resources_list"
         app:layout_constraintTop_toTopOf="parent"/>
-
+    </LinearLayout>
     <ListView
         android:id="@+id/task_resources_list"
         android:layout_width="405dp"
@@ -55,5 +62,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resources_list" />
+        app:layout_constraintTop_toBottomOf="@+id/resources_list1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
