--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -5,13 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.forum.ForumFragment">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#EFAA52"
+    android:gravity="center"
+    android:id="@+id/forum_medicine_bt1">
     <Button
         android:id="@+id/forum_others_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#EFAA52"
         android:text="其他"
+        android:textSize="20sp"
+        android:textColor="#ffffff"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,6 +29,8 @@
         android:layout_height="wrap_content"
         android:background="#EFAA52"
         android:text="人员"
+        android:textSize="20sp"
+        android:textColor="#ffffff"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,11 +41,13 @@
         android:layout_height="wrap_content"
         android:background="#EFAA52"
         android:text="药物"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toStartOf="@+id/forum_others_bt"
         app:layout_constraintStart_toEndOf="@+id/forum_people_bt"
         app:layout_constraintTop_toTopOf="parent" />
-
+</LinearLayout>
     <ListView
         android:id="@+id/forum_lv"
         android:layout_width="405dp"
@@ -50,6 +61,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forum_medicine_bt" />
+        app:layout_constraintTop_toBottomOf="@+id/forum_medicine_bt1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
