--- a/app/src/main/res/layout/fragment_mwlv_item.xml
+++ b/app/src/main/res/layout/fragment_mwlv_item.xml
@@ -8,10 +8,9 @@
 
     <ImageView
         android:id="@+id/user_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="90dp"
+        android:layout_height="61dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -19,24 +18,26 @@
 
     <TextView
         android:id="@+id/user_name"
-        android:layout_width="202dp"
-        android:layout_height="74dp"
+        android:layout_width="273dp"
+        android:layout_height="37dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="18dp"
         android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/user_image"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/user_last_message"
-        android:layout_width="202dp"
-        android:layout_height="43dp"
+        android:layout_width="273dp"
+        android:layout_height="20dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
         android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
         app:layout_constraintBottom_toBottomOf="@+id/user_image"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/user_image" />
 </androidx.constraintlayout.widget.ConstraintLayout>
