--- a/app/src/main/res/layout/fragment_forum_content.xml
+++ b/app/src/main/res/layout/fragment_forum_content.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/ft"
             android:layout_width="378dp"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
@@ -26,14 +26,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/fc"
             android:layout_width="378dp"
             android:layout_height="78dp"
             android:layout_marginTop="4dp"
             android:text="############"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintStart_toStartOf="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintStart_toStartOf="@+id/ft"
+            app:layout_constraintTop_toBottomOf="@+id/ft" />
 
         <ListView
             android:id="@+id/fc_lv"
@@ -42,12 +42,12 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/fc" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/comment_edit"
         android:layout_width="305dp"
         android:layout_height="42dp"
         android:layout_marginStart="16dp"
